--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 
   <head>
 
-    <title>Image Gallery</title>
+    <title>Tarrapin Gallery</title>
     <link rel="stylesheet" href="bootstrap.css" type="text/css">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
